# FASTST

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Problem.md  Protocols.md  READEME.md  README.md  gelu.py  mish.py  rdseedtest.c  setup_and_build.sh  sigmoid.py  tanh.md  tanh.py
src/: CMakeLists.txt  config.h  fixed-transformer.cpp  fixed-transformer.h  model.h  module.h  party.h  protocols.h  transformer.cpp  transformer.h  utils.h
src/ezpc_scilib/: CMakeLists.txt  aes-ni.h  block.h  bool-data.cpp  bool-data.h  constants.h  ezpc_utils.h  fixed-point.cpp  fixed-point.h  prg.h
src/ezpc_scilib/BuildingBlocks/: CMakeLists.txt  aux-protocols.cpp  aux-protocols.h  linear-ot.cpp  linear-ot.h  linear-uniform.h  truncation.cpp  truncation.h  value-extension.cpp  value-extension.h
src/ezpc_scilib/FixedPoint/: CMakeLists.txt  bool-data.cpp  bool-data.h  fixed-math-coeffs.h  fixed-math.cpp  fixed-math.h  fixed-point.cpp  fixed-point.h
src/ezpc_scilib/FixedPoint_onfield/: CMakeLists.txt  fixed-point-field.cpp  fixed-point-field.h
src/ezpc_scilib/GC/: CMakeLists.txt  aes_opt.h  bit.h  bit.hpp  circuit_execution.h  comparable.h  emp-sh2pc.h  emp-tool.cpp  emp-tool.h  f2k.h  halfgate_eva.cpp  halfgate_eva.h  halfgate_gen.cpp  halfgate_gen.h  integer.h  integer.hpp  mitccrh.h  number.h  protocol_execution.h  semihonest.h  sh_eva.h  sh_gen.h  sh_party.h  swappable.h  utils.h
src/ezpc_scilib/Math/: CMakeLists.txt  math-functions.cpp  math-functions.h
src/ezpc_scilib/Millionaire/: CMakeLists.txt  bit-triple-generator.h  equality.h  millionaire.h  millionaire_with_equality.h
src/ezpc_scilib/NonLinear/: CMakeLists.txt  argmax.h  drelu-field.h  maxpool.h  relu-field.h  relu-interface.h  relu-ring.h
src/ezpc_scilib/OT/: CMakeLists.txt  emp-ot.h  ideal.h  iknp.h  kkot.h  np.h  ot-utils.h  ot.h  ot_pack.h  split-iknp.h  split-kkot.h  split-utils.h
src/ezpc_scilib/Utils/: CMakeLists.txt  aes-ni.h  aes.h  aes_opt.h  block.h  ccrf.h  constants.h  crh.h  emp-tool.h  ezpc_scilib_tool.h  ezpc_scilib_tool.hpp  group.h  group_openssl.h  hash.h  io_channel.h  io_pack.h  net_io_channel.h  prg.h  prp.h  ubuntu_terminal_colors.h
src/ezpc_scilib/Utils/ArgMapping/: ArgMapping.h
src/ezpc_scilib/Utils/cmake/: FindGMP.cmake  source_of_randomness.cmake
src/ezpclib/: CMakeLists.txt  bool-data.cpp  bool-data.h  fixed-point.cpp  fixed-point.h
src/fixed_lib/: CMakeLists.txt  fixed_lib.cpp  fixed_lib.h
src/protocols/: CMakeLists.txt  attention.cpp  attention.h  bfv-layer-norm.cpp  bfv-layer-norm.h  bfv-protocol.h  ffn.cpp  ffn.h  fix-attention.h  fixed-attention.cpp  fixed-attention.h  fixed-ffh.h  fixed-ffn.cpp  fixed-ffn.h  fixed-layer-norm.cpp  fixed-layer-norm.h  fixed-ln.cpp  fixed-protocol.h  layer-norm.cpp  layer-norm.h  layer-norm1.cpp  layer-norm1.h  layer-norm2.cpp  layer-norm2.h  layer_norm1.cpp  layer_norm1.h  layer_norm2.cpp  layer_norm2.h  protocol.h
src/utils/: CMakeLists.txt  aes-ni.h  aes.h  color_config.h  constants.h  conversion.cpp  conversion.h  global_config.h  he-bfv.cpp  he-bfv.h  he-tools.cpp  he-tools.h  he_tools.cpp  he_tools.h  io.cpp  io.h  mat-tools.cpp  mat-tools.h  mat_tools.cpp  mat_tools.h  netio.cpp  netio.h  time-count.h
test/: CMakeLists.txt  RFCP_matmul_test.cpp  acc_attn_test.cpp  acc_ffn_test.cpp  acc_layer-norm1_test.cpp  acc_layer-norm_test.cpp  bfv_add_test.cpp  data.txt  generate_primes.py  mat_test.cpp  pro_attn_test.cpp  pro_ffn_test.cpp  pro_layer-norm1_test.cpp  pro_layer-norm_test.cpp  pro_transformer_test.cpp  seal_parm_test.cpp  seg5Gelu.py  shamirSecertshare.py  splitdata.py  test_attn.cpp  test_sec_trans.cpp  test_toy_trans.cpp
test/accuracy_test/: CMakeLists.txt  acc_attn_test.cpp  acc_bfv_test.cpp  acc_ffn_test.cpp  acc_layer-norm_test.cpp  bfv_acc_layer-norm_test.cpp  fixed_acc_layer-norm_test.cpp
test/activate_func_test/glue_data_acc_test/: error_and_time_test_Gelu.py
test/activate_func_test/ml_non_linear/othertest/: __init__.py  logsitic_regersssion.py  networt_test.py
test/activate_func_test/ml_non_linear/utils/: __init__.py  appr_sigmoid.py  data_utils.py
test/activate_func_test/sigmoid_ml_test/: logistic_sigmoid.cpp  sigmoid.py
test/activate_func_test/tanh_ml_test/: tanh.py
test/activation/: CMakeLists.txt  bolt_gelu.cpp  bolt_layer_norm.cpp  bolt_softmax.cpp  bolt_tanh.cpp  iron_gelu.cpp  iron_layer_norm.cpp  iron_softmax.cpp  iron_tanh.cpp
test/bert/: bert.cpp  bert.h  bert_test.cpp
test/bert_bolt/: CMakeLists.txt  bert.cpp  bert.h  bert_utils.cpp  bert_utils.h  bolt_bert.cpp  bolt_bert_word_elimination.cpp  he.cpp  he.h  linear.cpp  linear.h  nonlinear.cpp  nonlinear.h  test_nonlinear.cpp
test/bert_fastlmpi/: CMakeLists.txt  FIT_test.cpp  bert.cpp  bert.h  bert_test.cpp  gelu_test.cpp  linear1.h  linear1_test.cpp  p-r_test.cpp  softmax_test.cpp
test/bert_iron/: CMakeLists.txt  bert.cpp  bert.h  bert_utils.cpp  bert_utils.h  he.cpp  he.h  iron_bert.cpp  linear.cpp  linear.h  nonlinear.cpp  nonlinear.h
test/experiment/: bar.py  gule_error.py
test/fixed_func_test/: CMakeLists.txt  fixed_add_test.cpp  fixed_comm_test.cpp  fixed_conversion_test.cpp  fixed_exp_test.cpp  fixed_fix_mean_test.cpp  fixed_load-data_test.cpp  fixed_matmul_test.cpp  fixed_mean_test.cpp  fixed_mul_test.cpp
test/glue_data_acc_test/: error_and_time_test_Gelu.py
test/other_test/: CMakeLists.txt  FIT_test.cpp  RFCP_test.cpp  SIMD_test.cpp  gelu_test.cpp  io_test.cpp  layernorm_test.cpp  matmul_test.cpp  softmax_test.cpp
test/protocols_test/: CMakeLists.txt  fixed_pro_attention_test.cpp  fixed_pro_ffn_test.cpp  fixed_pro_layer-norm_test.cpp  fixed_pro_transformer_test.cpp  pro_attn_test.cpp  pro_ffn_test.cpp  pro_layer-norm_test.cpp  pro_transformer_test.cpp
